--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "warwar/yii2-theme-flat",
-    "description": "Theme for Yii2 Web Application",
+    "description": "Flat theme for Yii2 Web Application",
     "type": "yii2-extension",
     "keywords": ["yii2", "extension", "theme", "flat"],
     "license": "MIT",
@@ -12,6 +12,10 @@
     ],
     "require": {
         "yiisoft/yii2": "*"
+    },
+    "support": {
+        "issues": "https://github.com/warwar/yii2-theme-flat/issues?state=open",
+        "source": "https://github.com/warwar/yii2-theme-flat"
     },
     "autoload": {
         "psr-4": {
