--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "yii2-extension",
     "keywords": ["yii2", "extension", "theme", "flat"],
     "license": "MIT",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "warwar",
